Wed Feb 19 18:57:02 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Bypass getaddrinfo() if node and serv are numeric.
	  Reporeted by Naotoshi Seo.  [ruby-core:60801] [Bug #9525]

	* ext/socket/extconf.rb: Detect struct sockaddr_in6.sin6_len.

	* ext/socket/sockport.h (SET_SIN6_LEN): New macro.
	  (INIT_SOCKADDR_IN6): Ditto.

	* ext/socket/rubysocket.h (struct rb_addrinfo): Add
	  allocated_by_malloc field.

	* ext/socket/raddrinfo.c (numeric_getaddrinfo): New function.
	  (rb_getaddrinfo): Call numeric_getaddrinfo at first.
	  (rb_freeaddrinfo): Free struct addrinfo properly when it is
	  allocated by numeric_getaddrinfo.

Wed Feb 19 18:31:48 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Wrap struct addrinfo by struct rb_addrinfo.

Wed Feb 19 17:47:01 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (ip_s_getaddress): Don't access freed memory.

Wed Feb 19 11:39:41 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: it must see rb_cv_broken_memmem not rb_cv_func_memmem.

Tue Feb 18 23:18:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/socket/test_socket.rb: unix socket is required by test case.

Tue Feb 18 20:48:38 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/socket/test_addrinfo.rb: remove unused variables.
	* test/socket/test_nonblock.rb: ditto.
	* test/socket/test_socket.rb: ditto.
	* test/socket/test_unix.rb: ditto.
	* test/testunit/test_parallel.rb: ditto.
	* test/webrick/test_filehandler.rb: ditto.
	* test/xmlrpc/test_features.rb: ditto.
	* test/zlib/test_zlib.rb: ditto.

Tue Feb 18 14:27:18 2014  Shota Fukumori  <her@sorah.jp>

	* lib/test/unit.rb: Requires minitest < 5.0.0 if Gem is available.

Tue Feb 18 14:24:07 2014  Shota Fukumori  <her@sorah.jp>

	* lib/test/unit/test-unit.gemspec: Add minitest < 5.0.0 dependency

	* tool/rbinstall.rb: Add empty implementations for `add_dependency`,
	  `add_runtime_dependency`, `add_development_dependency` for
	  Gem::Specification.
