@@ -1,3 +1,10 @@
+Thu Feb 20 11:21:13 2014  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* hash.c (rb_hash_flatten): fix behavior of flatten(-1).
+	  [ruby-dev:47988] [Bug #9533]
+
+	* test/ruby/test_array.rb: test for above.
+
 Wed Feb 19 18:57:02 2014  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket: Bypass getaddrinfo() if node and serv are numeric.
